--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "flow": "flow",
     "react": "16.4.1",
     "react-native": "0.56.0",
+    "react-native-inverted-flat-list": "^1.0.1",
     "react-navigation": "^2.6.2"
   },
   "devDependencies": {
@@ -27,6 +28,8 @@
     "transform": {
       "^.+\\js$": "<rootDir>/node_modules/react-native/jest/preprocessor.js"
     },
-    "setupFiles": ["<rootDir>/setupTests.js"]
+    "setupFiles": [
+      "<rootDir>/setupTests.js"
+    ]
   }
 }
